test(hypershot): finalize clean core regression suite